# ChangeLog for dev-java/blackdown-jre
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/blackdown-jre/ChangeLog,v 1.72 2006/01/14 22:12:47 nichoj Exp $

  14 Jan 2006; Joshua Nichols <nichoj@gentoo.org>
  blackdown-jre-1.3.1-r9.ebuild, blackdown-jre-1.4.1-r1.ebuild,
  blackdown-jre-1.4.2.01-r1.ebuild, blackdown-jre-1.4.2.02.ebuild,
  blackdown-jre-1.4.2.02-r1.ebuild, blackdown-jre-1.4.2.03.ebuild:
  Removed redundant dependencies provided by java.eclass (bug #118651).

  09 Jan 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  blackdown-jre-1.4.1-r1.ebuild:
  Added bit fat warning for sparc wrt #96229 and #118114

  07 Jan 2006; Joshua Nichols <nichoj@gentoo.org>
  blackdown-jre-1.4.2.03.ebuild:
  Marked stable on amd64 for security bug #118114.

*blackdown-jre-1.4.2.03 (25 Dec 2005)

  25 Dec 2005; Petteri Räty <betelgeuse@gentoo.org>
  +files/blackdown-jre-1.4.2.03, +blackdown-jre-1.4.2.03.ebuild:
  Version bump. Fixes bug #116466.

  18 Oct 2005; Aron Griffis <agriffis@gentoo.org>
  blackdown-jre-1.3.1-r9.ebuild, blackdown-jre-1.4.1-r1.ebuild,
  blackdown-jre-1.4.2.01-r1.ebuild, blackdown-jre-1.4.2.02.ebuild,
  blackdown-jre-1.4.2.02-r1.ebuild:
  Warn about deprecated browserplugin useflag

  18 Oct 2005; Aron Griffis <agriffis@gentoo.org>
  blackdown-jre-1.3.1-r9.ebuild, blackdown-jre-1.4.1-r1.ebuild,
  blackdown-jre-1.4.2.01-r1.ebuild, blackdown-jre-1.4.2.02.ebuild,
  blackdown-jre-1.4.2.02-r1.ebuild:
  Respect the global USE=nsplugin instead of the local USE=browserplugin

*blackdown-jre-1.4.2.02-r1 (06 Oct 2005)

  06 Oct 2005; Petteri Räty <betelgeuse@gentoo.org>
  +blackdown-jre-1.4.2.02-r1.ebuild:
  Fixed the installation of the icon and the desktop entry reported in bug
  #108212. Thanks to Dave Shanker <dshanker@gmail.com> for reporting.

  26 Aug 2005; Diego Pettenò <flameeyes@gentoo.org>
  blackdown-jre-1.4.2.02.ebuild:
  Fix cp -a usage for Gentoo/FreeBSD.
