@@ -1,0 +1,2 @@
+MD5 0785ca638962dc85a31dd8a6dc40007a j2re-1.4.2-03-linux-amd64.bin 13198020
+MD5 cf4f3c8c86f64fd532f074943b432285 j2re-1.4.2-03-linux-i586.bin 13541431
