@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/blackdown-jre
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/blackdown-jre/ChangeLog,v 1.72 2006/01/14 22:12:47 nichoj Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/blackdown-jre/ChangeLog,v 1.73 2006/01/19 00:21:32 nichoj Exp $
+
+*blackdown-jre-1.4.2.03-r1 (19 Jan 2006)
+
+  19 Jan 2006; Joshua Nichols <nichoj@gentoo.org>
+  +blackdown-jre-1.4.2.03-r1.ebuild:
+  Now installs files for Java Web Start (bug #115205).
 
   14 Jan 2006; Joshua Nichols <nichoj@gentoo.org>
   blackdown-jre-1.3.1-r9.ebuild, blackdown-jre-1.4.1-r1.ebuild,
